tests/ui/compile_fail/multiple_named_fields.rs
#[derive(enumorph::Enumorph)]
enum Enum {
    A { b: u8, c: u8 },
}

fn main() {}
