tests/ui/compile_fail/multiple_named_fields.stderr
error: only variants with one field are supported
 --> tests/ui/compile_fail/multiple_named_fields.rs:3:7
  |
3 |     A { b: u8, c: u8 },
  |       ^^^^^^^^^^^^^^^^
